# aoc

./: .gitignore  README.md  aoc.opam  dune  dune-project
lib/: angstrom_modified.ml  angstrom_modified.mli  aoc_std.ml  dune  fut.ml  grid.ml  grid.mli  interval.ml  interval.mli  iter.ml  iter.mli  list.ml  list.mli  memo.ml  memo.mli  par_memo.ml  par_memo.mli  parallel_iter.ml  parallel_iter.mli  utils.ml  utils.mli
solutions/2023/1/: dune  solution.ml
solutions/2023/10/: dune  solution.ml
solutions/2023/11/: dune  solution.ml
solutions/2023/12/: dune  solution.ml
solutions/2023/13/: dune  solution.ml
solutions/2023/14/: dune  solution.ml
solutions/2023/15/: dune  solution.ml
solutions/2023/16/: dune  solution.ml
solutions/2023/17/: dune  solution.ml
solutions/2023/18/: dune  solution.ml
solutions/2023/19/: dune  solution.ml
solutions/2023/2/: dune  solution.ml
solutions/2023/20/: dune  solution.ml
solutions/2023/21/: dune  solution.ml
solutions/2023/22/: dune  solution.ml
solutions/2023/23/: dune  solution.ml
solutions/2023/24/: dune  solution.ml
solutions/2023/25/: dune  solution.ml
solutions/2023/3/: dune  solution.ml
solutions/2023/4/: dune  solution.ml
solutions/2023/5/: dune  solution.ml
solutions/2023/6/: dune  solution.ml
solutions/2023/7/: dune  solution.ml
solutions/2023/8/: dune  solution.ml
solutions/2023/9/: dune  solution.ml
solutions/2024/1/: dune  solution.ml  test.ml
solutions/2024/10/: dune  solution.ml  test.ml
solutions/2024/11/: dune  solution.ml  test.ml
solutions/2024/12/: dune  solution.ml  test.ml
solutions/2024/13/: dune  solution.ml  test.ml
solutions/2024/14/: dune  solution.ml  test.ml
solutions/2024/15/: dune  solution.ml  test.ml
solutions/2024/16/: dune  solution.ml  test.ml
solutions/2024/17/: dune  solution.ml  test.ml
solutions/2024/18/: dune  solution.ml  test.ml
solutions/2024/19/: dune  solution.ml  test.ml
solutions/2024/2/: dune  solution.ml  test.ml
solutions/2024/20/: dune  solution.ml  test.ml
solutions/2024/21/: dune  solution.ml  test.ml
solutions/2024/22/: dune  solution.ml  test.ml
solutions/2024/23/: dune  solution.ml  test.ml
solutions/2024/24/: dune  solution.ml  test.ml
solutions/2024/25/: dune  solution.ml  test.ml
solutions/2024/3/: dune  solution.ml  test.ml
solutions/2024/4/: dune  solution.ml  test.ml
solutions/2024/5/: dune  solution.ml  test.ml
solutions/2024/6/: dune  solution.ml  test.ml
solutions/2024/7/: dune  solution.ml  test.ml
solutions/2024/8/: dune  solution.ml  test.ml
solutions/2024/9/: dune  solution.ml  test.ml
solutions/2025/1/: dune  solution.ml  test.ml
solutions/2025/10/: dune  solution.ml  test.ml
test/: angstrom_test.ml  dune  test.ml
(+24 files in other folders)
