(library
 (name aoc_std)
 (package aoc)
 (synopsis "a standard library, modified and extended from core")
 (preprocess
  (pps ppx_jane))
 (libraries
  iter
  (re_export core)
  angstrom
  core_kernel.composition_infix
  psq
  obatcher
  obatcher.ds
  picos
  picos_std.structured
  picos_std.sync
  (re_export base)
  (re_export ppx_expect.config_types)))
