(library
 (name aoc_std)
 (package aoc)
 (synopsis "a standard library, modified and extended from core")
 (preprocess
  (pps ppx_jane ppx_deriving.enum))
 (libraries
  iter
  core
  angstrom
  core_kernel.composition_infix
  psq
  picos
  picos_std.sync
  (re_export moonpool)
  multicore-magic
  moonpool.fib
  moonpool.forkjoin
  moonpool.sync
  core_kernel.caml_threads))
